Radi skidanje zip fajla perfektno

--- a/popup.html
+++ b/popup.html
@@ -11,15 +11,15 @@
         <h2>Ali Downloads</h2>
         <div class="options">
             <div class="option">
-                <input type="checkbox" id="images" name="images">
+                <input type="checkbox" id="images" name="images" checked>
                 <label for="images">Images</label>
             </div>
             <div class="option">
-                <input type="checkbox" id="videos" name="videos">
+                <input type="checkbox" id="videos" name="videos" checked>
                 <label for="videos">Videos</label>
             </div>
             <div class="option">
-                <input type="checkbox" id="description" name="description">
+                <input type="checkbox" id="description" name="description" checked>
                 <label for="description">Description</label>
             </div>
         </div>
