--- a/popup.html
+++ b/popup.html
@@ -25,6 +25,7 @@
         </div>
         <div class="download-btn-container">
             <button class="download-btn">Download</button>
+            <progress class="download-progress" max="100" value="0"></progress>
         </div>
     </div>
     <script src="popup.js"></script>
