--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ali Downloads</title>
+    <title>Ali-Downloads</title>
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
