Consistency of the name

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Ali Downloads</h2>
+        <h2>Ali-Downloads</h2>
         <div class="options">
             <div class="option">
                 <input type="checkbox" id="images" name="images" checked>
