finished extension pay

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-    <div class="container">
+    <!--div class="container">
         <h2>Ali-Downloads</h2>
         <div class="options">
             <div class="option">
@@ -27,7 +27,15 @@
             <button class="download-btn">Download</button>
             <progress class="download-progress" max="100" value="0"></progress>
         </div>
+    </div-->
+    <div class="container">
+        <header>
+            <h2>Ali-Downloads</h1>
+            <p>Sorry, but payment is nesseccary to use this extension</p>
+            <button class="download-btn">Pay now</button>
+        </header>
     </div>
+    <script src="ExtPay.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
