--- a/website/index.html
+++ b/website/index.html
@@ -18,7 +18,7 @@
   <nav class="bg-white border-b-gray-200 dark:bg-custom-black border-b-[0.5px] dark:border-b-gray-700">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="index.html" class="flex items-center">
-        <img src="Resources/logo.svg" class="h-8 mr-3" alt="Ali-Downloads Logo" />
+        <img src="Resources/icon_128.png" class="h-8 mr-3" alt="Ali-Downloads Logo" />
       </a>
       <div class="flex md:order-2">
         <button type="button"
@@ -97,7 +97,7 @@
         </div>
       </div>
     
-      <img class="w-full md:w-8/12 m-auto rounded-lg shadow-sm" src="Resources/main_image.png">
+      <img width="1000" height="600" class="w-full md:w-8/12 m-auto rounded-lg shadow-sm" src="Resources/full_logo.jpg">
     
       <div class="p-2 flex justify-start w-full md:w-1/6 h-auto">
         <div class="flex-col shadow-md gap-2 p-2 md:mt-[85%] mt-0">
@@ -126,7 +126,7 @@
         ready for use.</div>
     </div>
   
-    <img class="md:w-[45%] w-[80%] mx-auto h-full mt-4 md:mt-0" src="Resources/Frame 25.svg" />
+    <img class="md:w-[45%] w-[80%] mx-auto h-full mt-4 md:mt-0" src="Resources/icon_128.png" />
   </div>
   <div
     class="w-full md:w-[50%] p-4 flex flex-wrap md:flex-col-reverse shadow-sm lg:flex-row-reverse justify-center gap-[10%] items-center relative dark:bg-custom-black  mt-8 ">
@@ -221,7 +221,7 @@
       <div class="md:flex md:justify-between">
         <div class="mb-6 md:mb-0  md:pt-14 pt-0">
           <a href="#home" class="flex items-center justify-center">
-            <img src="Resources/logo.svg" class="h-12 mr-3" alt="Ali-Downloads Logo" />
+            <img src="Resources/icon_128.png" class="h-12 mr-3" alt="Ali-Downloads Logo" />
             <span class="dark:text-white text-stone-800 text-lg hover:underline">Ali-Downloads</span>
           </a>
         </div>
