--- a/website/index2.html
+++ b/website/index2.html
@@ -29,7 +29,7 @@
   <nav class="bg-white border-b-gray-200 dark:bg-custom-black border-b-[0.5px] dark:border-b-gray-700">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="index.html" class="flex items-center">
-        <img src="Resources/logo.svg" class="h-8 mr-3" alt="Workstation+ Logo" />
+        <img src="Resources/icon_128.png" class="h-8 mr-3" alt="Workstation+ Logo" />
       </a>
       <div class="flex md:order-2">
         <button type="button"
@@ -194,7 +194,7 @@
       <div class="md:flex md:justify-between">
         <div class="mb-6 md:mb-0  md:pt-14 pt-0">
           <a href="#home" class="flex items-center justify-center">
-            <img src="Resources/logo.svg" class="h-12 mr-3" alt="Ali-Downloads Logo" />
+            <img src="Resources/icon_128.png" class="h-12 mr-3" alt="Ali-Downloads Logo" />
             <span class="dark:text-white text-stone-800 text-lg hover:underline">Ali-Downloads</span>
           </a>
         </div>
