--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,7 @@
         <div class="download-btn-container">
             <button class="download-btn">Download</button>
             <progress class="download-progress" max="100" value="0"></progress>
+            <span class="corner-text">© Ali-Downloads</span>
         </div>
     </div-->
     <div class="container">
