--- a/website/index2.html
+++ b/website/index2.html
@@ -84,34 +84,44 @@
         <li id="first"
           class="relative hover:underline cursor-pointer py-4 transition duration-300 ease-in-out"
           onclick="selectItem(this)">
-          <a href="#general">General</a>
+          <a href="#welcome">Welcome to Ali-Downloads</a>
         </li>
         <li class="relative hover:underline cursor-pointer py-4 transition duration-300 ease-in-out "
           onclick="selectItem(this)">
-          <a href="#cookies">Use of Cookies</a>
+          <a href="#infoCollect">What Information We Collect</a>
         </li>
         <li class="relative hover:underline cursor-pointer py-4 transition duration-300 ease-in-out "
           onclick="selectItem(this)">
-          <a href="#what">What Information
-            does Ali-Downloads Collect?</a>
+          <a href="#infoUse">How We Use Your Information</a>
         </li>
         <li class="relative hover:underline cursor-pointer py-4 transition duration-300 ease-in-out "
           onclick="selectItem(this)">
-          <a href="#does">Does Workstation+ disclose information to anyone else?</a>
+          <a href="#protect">How We Protect Your Information</a>
         </li>
         <li class="relative hover:underline cursor-pointer py-4 transition duration-300 ease-in-out "
           onclick="selectItem(this)">
-          <a href="#Changes">Changes to the Privacy Policy</a>
+          <a href="#dataRetention">Data Retention</a>
         </li>
         <li class="relative hover:underline cursor-pointer py-4 transition duration-300 ease-in-out "
           onclick="selectItem(this)">
-          <a href="#information">Further information</a>
+          <a href="#thirdParty">Third-Party Services</a>
         </li>
         <li class="relative hover:underline cursor-pointer py-4 transition duration-300 ease-in-out "
           onclick="selectItem(this)">
-          <a href="#AGA">AGA Consulting Services LLC</a>
+          <a href="#serviceIntegrity">Service Integrity and Data Use</a>
         </li>
-
+        <li class="relative hover:underline cursor-pointer py-4 transition duration-300 ease-in-out "
+          onclick="selectItem(this)">
+          <a href="#rights">Your Rights</a>
+        </li>
+        <li class="relative hover:underline cursor-pointer py-4 transition duration-300 ease-in-out "
+          onclick="selectItem(this)">
+          <a href="#changes">Changes to this Privacy Policy</a>
+        </li>
+        <li class="relative hover:underline cursor-pointer py-4 transition duration-300 ease-in-out "
+          onclick="selectItem(this)">
+          <a href="#contact">Contact Us</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -124,49 +134,71 @@
         <div class="text-center text-stone-800 text-5xl font-medium">Privacy Policy</div>
       </div>
       <div class="flex-col justify-center items-start gap-[50px] flex">
-        <div id="general" class="flex-col justify-center items-start gap-[13px] flex">
-          <div class="self-stretch text-stone-800 text-3xl font-medium ">General</div>
+        <div id="welcome" class="flex-col justify-center items-start gap-[13px] flex">
+          <div class="self-stretch text-stone-800 text-3xl font-medium ">Welcome to Ali-Downloads!</div>
           <div class="self-stretch text-stone-800 text-md font-normal ">
-            Ali-Downloads respects the privacy of all those who use the services we provide on this extension. We have a simple policy that we will not willfully disclose any personal information regarding our users without first obtaining their permission, unless required by law. By using our extension, you consent to the collection and use of your information as outlined in this policy and to our Terms and Conditions of use.
+            Ali-Downloads ("we", "our", or "us") values and respects the privacy of our users ("you" or "user"). This Privacy Policy outlines how we collect, use, disclose, and safeguard your information when you use our Google Chrome extension designed for Microsoft Word to download descriptions, images, and videos from AliBaba and AliExpress ("Service").
+            Please read this Privacy Policy carefully. IF YOU DO NOT AGREE WITH THE TERMS OF THIS PRIVACY POLICY, PLEASE DO NOT USE THE SERVICE.
           </div>
         </div>
-        <div id="cookies" class="flex-col justify-start items-start gap-2.5 flex">
-          <div class="self-stretch text-stone-800 text-3xl font-medium ">Use of Cookies</div>
+        <div id="infoCollect" class="flex-col justify-start items-start gap-2.5 flex">
+          <div class="self-stretch text-stone-800 text-3xl font-medium ">What Information We Collect</div>
           <div class="self-stretch text-stone-800 text-md font-normal ">
-            A “cookie” is a file sent to your browser by a web server and stored on your computer. It contains data that websites use to identify you as a unique user. Companies which may choose to advertise via our extension or related search pages may collect information from you if you click on their advertisements or access their sites. They may do this by using cookies. Due to the way the Internet operates, we cannot control this collection of information. Most web browsers are initially set up to accept cookies. You can change the settings of your browser to refuse all cookies or to notify you each time a cookie is sent to your computer, giving you the choice whether to accept it or not.<br />If you have any questions or concerns about the way in which information is collected or used by another site, then you should contact whoever is responsible for that site directly.
+            Payment Information: While we incorporate Stripe to process your payments, we do not directly store your payment information. Stripe handles all the details. The only information we receive is confirmation of payment.
           </div>
         </div>
-        <div id="what" class="flex-col justify-start items-start gap-2.5 flex">
-          <div class="self-stretch text-stone-800 text-3xl font-medium ">What Information does Ali-Downloads Collect?</div>
+        <div id="infoUse" class="flex-col justify-start items-start gap-2.5 flex">
+          <div class="self-stretch text-stone-800 text-3xl font-medium ">How We Use Your Information</div>
           <div class="self-stretch text-stone-800 text-md font-normal ">
-            Ali-Downloads does not collect any personal information about you (such as your name or email address) except when you specifically and knowingly provide that information. We do keep a record of the IP addresses from which users access our extension. This data is used by us for internal administration, and to analyse the way in which people use our extension, so that we can keep improving the services we offer. This data also provides us with anonymous and broad demographic information about those using our extension.
+            We use the information we collect from you only to
+            process your transactions and
+            Monitor and analyze usage and trends to improve your experience with the Service.
           </div>
         </div>
-        <div id="does" class="flex-col justify-start items-start gap-2.5 flex">
-          <div class="self-stretch text-stone-800 text-3xl font-medium ">Does Ali-Downloads disclose information to anyone else?</div>
+        <div id="protect" class="flex-col justify-start items-start gap-2.5 flex">
+          <div class="self-stretch text-stone-800 text-3xl font-medium ">How We Protect Your Information</div>
           <div class="self-stretch text-stone-800 text-md font-normal ">
-            We do not disclose any personal information about our extension users to any 3rd party. For example, we may disclose the total number of “hits” our extension receives, or how often the average user visits our extension, or which terms are most often entered in our search engine. Please be aware, however, that we will release specific personal information about you if required by law. We receive and reply to emails from users on a regular basis. For record-keeping purposes, we retain copies of all incoming and outgoing email. Information in the email we receive or send will not be disclosed to any third party without the permission of the sender, either express or implied, unless required by law.
+            We have implemented appropriate technical and organizational security measures designed to protect the security of any personal information we process. However, no system can be guaranteed as entirely secure. We cannot guarantee the complete security of your personal data.
           </div>
         </div>
-        <div id="collect" class="flex-col justify-center items-start gap-2.5 flex">
-          <div class="self-stretch text-stone-800 text-3xl font-medium ">What Information does Ali-Downloads Collect?</div>
+        <div id="dataRetention" class="flex-col justify-center items-start gap-2.5 flex">
+          <div class="self-stretch text-stone-800 text-3xl font-medium ">Data Retention</div>
           <div class="self-stretch text-stone-800 text-md font-normal ">
-            Ali-Downloads does not collect any personal information about you (such as your name or email address) except when you specifically and knowingly provide that information. We do keep a record of the IP addresses from which users access our extension. This data is used by us for internal administration, and to analyze the way in which people use our extension, so that we can keep improving the services we offer. This data also provides us with anonymous and broad demographic information about those using our extension.
+            We will retain your data only for as long as necessary for the purposes set out in this Privacy Policy, and to the extent necessary to comply with our legal obligations.
           </div>
         </div>
-        <div id="Changes" class=" flex-col justify-start items-start gap-2.5 flex">
-          <div class="self-stretch text-stone-800 text-3xl font-medium ">Changes to the Privacy Policy</div>
+        <div id="thirdParty" class=" flex-col justify-start items-start gap-2.5 flex">
+          <div class="self-stretch text-stone-800 text-3xl font-medium ">Third-Party Services</div>
           <div class="self-stretch text-stone-800 text-md font-normal ">
-            We may change this Privacy Policy from time to time at our discretion and without notice. If we do, an updated version of this Privacy Policy will be made available on this extension so that you remain aware of the data we collect, how we use it, and under what circumstances we disclose it.
-          </div>
+            Our Service might redirect you to third-party websites that are not operated by us. We have no control over these external sites, and we are not responsible for the content, privacy policies, or practices of any third-party sites or services.
+            Stripe: Our Service uses Stripe for payment processing. We do not store or collect your payment card details. That information is provided directly to Stripe, which has its privacy policy addressing how your personal data is handled.
+            </div>
         </div>
-        <div id="information" class=" flex-col justify-start items-start gap-2.5 flex">
-          <div class="self-stretch text-stone-800 text-3xl font-medium ">Further information</div>
+        <div id="serviceIntegrity" class=" flex-col justify-start items-start gap-2.5 flex">
+          <div class="self-stretch text-stone-800 text-3xl font-medium ">Service Integrity and Data Use</div>
           <div class="self-stretch text-stone-800 text-md font-normal ">
-            Please feel free to contact us if you have any questions, comments, or would like more information. You can contact the Ali-Downloads team at ‘contact details’ below. This Privacy Statement is version 1.0, and replaces all previous versions.
-          </div>
+            We guarantee that we DO NOT collect any data on products you scrape from AliBaba or AliExpress using our Service. Our primary focus is to provide a service that maintains the utmost integrity in protecting and valuing your privacy.          </div>
         </div>
-        <div id="AGA" class=" flex-col justify-start items-start gap-2.5 flex">
+        <div id="rights" class="flex-col justify-start items-start gap-2.5 flex">
+          <div class="self-stretch text-stone-800 text-3xl font-medium">Your Rights</div>
+          <ul class="self-stretch text-stone-800 text-md font-normal list-disc pl-5">
+            Under this Privacy Policy, and by law if you are within the EU, you have the following rights:
+              <li> • The right to be informed</li>
+              <li> • The right of access</li>
+              <li> • The right to rectification</li>
+              <li> • The right to erasure</li>
+              <li> • The right to restrict processing</li>
+              <li> • The right to data portability</li>
+              <li> • The right to object</li>
+              <li> • Rights in relation to automated decision making and profiling.</li>
+          </ul>
+      </div>      
+        <div id="changes" class=" flex-col justify-start items-start gap-2.5 flex">
+          <div class="self-stretch text-stone-800 text-3xl font-medium ">Changes to this Privacy Policy</div>
+          <div class="self-stretch text-stone-800 text-md font-normal ">
+            We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Last Updated" date.          </div>
+        </div>
+        <div id="contact" class=" flex-col justify-start items-start gap-2.5 flex">
           <div class="self-stretch text-stone-800 text-3xl font-medium ">AGA Consulting Services LLC</div>
           <div class="self-stretch">
             <span class="text-stone-800 text-md font-normal ">
