updated text on main page website

--- a/website/index.html
+++ b/website/index.html
@@ -85,9 +85,7 @@
           <img src="Resources/Star Shine.svg" class="w-1/4 ml-auto rounded-sm">
           <div class="text-stone-800 md:text-md text-sm font-semibold dark:text-gray-300">Enhance Your Efficiency:</div>
           <div class="self-stretch text-stone-800 md:text-md text-sm font-normal dark:text-gray-400 mt-2">
-            Ali-Downloads enables you to download any product from AliBaba and AliExpress with ease. With its intuitive
-            user interface, select what you want to download, ensuring all images, videos, and product descriptions are
-            organized neatly in respective folders.
+            Ali-Downloads enables you to download any product details from AliBaba and AliExpress with ease. With its intuitive user interface, select what you want to download, ensuring all images, videos, and product descriptions are organized neatly in respective folders.
           </div>
         </div>
       </div>
