contact us changed

--- a/website/index2.html
+++ b/website/index2.html
@@ -194,16 +194,14 @@
             We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Last Updated" date.          </div>
         </div>
         <div id="contact" class=" flex-col justify-start items-start gap-2.5 flex">
-          <div class="self-stretch text-stone-800 text-3xl font-medium ">AGA Consulting Services LLC</div>
+          <div class="self-stretch text-stone-800 text-3xl font-medium ">Contact Us</div>
           <div class="self-stretch">
+            If you have questions or comments about this Privacy Policy, please contact us at:<br />
             <span class="text-stone-800 text-md font-normal ">
-              1221 Brickell Avenue, Miami, FL.<br />
+              Unit 14413, PO Box 7169, Poole, BH15 9EL<br />
             </span>
             <span class="text-stone-800 text-md font-normal underline ">
-              extensions@
-            </span>
-            <span class="text-stone-800 text-md font-normal underline ">
-              alidownloads.io
+              admin@3D-Prototype.co.uk
             </span>
           </div>
         </div>        
