changed colors and href

--- a/website/index.html
+++ b/website/index.html
@@ -163,12 +163,13 @@
         class="grow shrink basis-0 flex-col justify-start items-start gap-16 inline-flex shadow-sm md:w-[60%] w-[50%] ">
         <div class="flex-col justify-start items-start gap-[24.18px] flex">
           <div class="text-slate-500 dark:text-gray-300 text-2xl font-semibold">Let’s Talk</div>
-          <div class=" text-stone-800 text-md font-normal dark:text-gray-400">Our offices are in United States & Spain.
+          <div class=" text-stone-800 text-md font-normal dark:text-gray-400">
+            Unit 14413, PO Box 7169, Poole, BH15 9EL
           </div>
         </div>
         <div class="flex-col justify-start items-start gap-4 flex">
           <div class="text-stone-800 text-xl font-semibold dark:text-white">Email</div>
-          <div class="text-stone-800 text-md font-normal dark:text-gray-400">extensions@facebase.io</div>
+          <div class="text-stone-800 text-md font-normal dark:text-gray-400">admin@3D-Prototype.co.uk</div>
         </div>
       </div>
       <section class="bg-white dark:bg-custom-black md:w-[40%] w-[50%]">
@@ -237,10 +238,7 @@
             <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Legal</h2>
             <ul class="text-gray-500 dark:text-gray-400 font-medium">
               <li class="mb-4">
-                <a href="#" class="hover:underline">Privacy Policy</a>
-              </li>
-              <li>
-                <a href="index2.html" class="hover:underline">Terms &amp; Conditions</a>
+                <a href="index2.html" class="hover:underline">Privacy Policy</a>
               </li>
             </ul>
           </div>
