--- a/website/index2.html
+++ b/website/index2.html
@@ -29,12 +29,12 @@
   <nav class="bg-white border-b-gray-200 dark:bg-custom-black border-b-[0.5px] dark:border-b-gray-700">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="index.html" class="flex items-center">
-        <img src="Resources/icon_128.png" class="h-8 mr-3" alt="Workstation+ Logo" />
+        <img src="Resources/icon_128.png" class="h-8 mr-3" alt="Ali-Downloads Logo" />
       </a>
       <div class="flex md:order-2">
         <button type="button"
           class="text-white bg-custom-purple hover:bg-slate-600 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0 dark:bg-custom-purple dark:hover:bg-slate-600 dark:focus:ring-slate-700">Get
-          Workstation+</button>
+          Ali-Downloads</button>
         <button data-collapse-toggle="navbar-cta" type="button"
           class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
           aria-controls="navbar-cta" aria-expanded="false">
@@ -243,9 +243,6 @@
             <ul class="text-gray-500 dark:text-gray-400 font-medium">
               <li class="mb-4">
                 <a href="#" class="hover:underline">Privacy Policy</a>
-              </li>
-              <li>
-                <a href="index2.html" class="hover:underline">Terms &amp; Conditions</a>
               </li>
             </ul>
           </div>
