changed full logo

--- a/website/index.html
+++ b/website/index.html
@@ -90,7 +90,7 @@
         </div>
       </div>
     
-      <img width="1000" height="600" class="w-full md:w-8/12 m-auto rounded-lg shadow-sm" src="Resources/full_logo.jpg">
+      <img width="1000" height="600" class="w-full md:w-8/12 m-auto rounded-lg shadow-sm" src="Resources/full_logo1.png">
     
       <div class="p-2 flex justify-start w-full md:w-1/6 h-auto">
         <div class="flex-col shadow-md gap-2 p-2 md:mt-[85%] mt-0">
