--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,7 @@
     <div class="container">
         <header>
             <h2>Ali-Downloads</h1>
-            <p>Sorry, but payment is nesseccary to use this extension</p>
+            <p>Sorry, but payment is necessary to use this extension</p>
             <button class="download-btn">Pay now</button>
         </header>
     </div>
