uploaded promo images and video went to website

--- a/popup.html
+++ b/popup.html
@@ -27,6 +27,7 @@
             <button class="download-btn">Download</button>
             <progress class="download-progress" max="100" value="0"></progress>
             <span class="corner-text">© Ali-Downloads</span>
+            <a href="#" class="manage-subscription" id="manageSubscriptionsButton">Manage Subscription</a>
         </div>
     </div-->
     <div class="container">
